# csv-surgeon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/csv_surgeon/: cli.py
tests/: test_cli.py
