[project]
name = "csv-surgeon"
version = "0.1.0"
description = ""
authors = [
    {name = "Sumit Nautiyal",email = "nautiyal.sumit@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "csv_surgeon", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
