[tool.poetry]
name = "csv-surgeon"
version = "0.1.0"
description = "A simple CLI tool to work with CSV files"
authors = [Sumit Nautiayl <nautiyal.sumit@protonmail.com>"]
readme = "README.md"
packages = [{ include = "csv_surgeon", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.scripts]
csv-surgeon = "csv_surgeon.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
